--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,3 +1,6 @@
+@import url(./_type/_error/popup__input_type_error.css);
+@import url(./-error/popup__input-error.css);
+
 .popup__input {
   width: 100%;
   height: 47px;
@@ -7,11 +10,7 @@
   line-height: 18px;
   box-sizing: border-box;
   padding: 10px 0 0;
-  margin-bottom: 10px;
-}
-
-.popup__input:last-of-type {
-  margin-bottom: 0;
+  margin-bottom: 5px;
 }
 
 @media screen and (max-width: 568px) {
